--- a/app/src/main/res/layout/activity_editar_endereco.xml
+++ b/app/src/main/res/layout/activity_editar_endereco.xml
@@ -5,75 +5,104 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#c0d0fe"
-    tools:context=".CadastroServicoActivity">
+    tools:context=".EditarEnderecoActivity">
 
     <TextView
-        android:id="@+id/tvCadastroServico"
+        android:id="@+id/tvEndereco"
         android:layout_width="242dp"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_marginStart="85dp"
-        android:layout_marginTop="35dp"
-        android:layout_marginEnd="84dp"
+        android:layout_marginTop="19dp"
+        android:layout_marginEnd="83dp"
         android:fontFamily="sans-serif-black"
-        android:text="Serviço"
+        android:text="Editar Endereço"
         android:textAlignment="center"
         android:textColor="#000000"
         android:textSize="48sp" />
 
     <EditText
-        android:id="@+id/etNomeServico"
+        android:id="@+id/etCep"
         android:layout_width="290dp"
         android:layout_height="48dp"
-        android:layout_below="@+id/tvCadastroServico"
+        android:layout_below="@+id/tvEndereco"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="58dp"
+        android:layout_marginTop="35dp"
+        android:layout_marginEnd="62dp"
+        android:ems="10"
+        android:hint="CEP"
+        android:inputType="number" />
+
+    <EditText
+        android:id="@+id/etCidade"
+        android:layout_width="290dp"
+        android:layout_height="48dp"
+        android:layout_below="@+id/etCep"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_marginStart="59dp"
         android:layout_marginTop="42dp"
         android:layout_marginEnd="61dp"
         android:ems="10"
-        android:hint="Nome do serviço"
+        android:hint="Cidade"
         android:inputType="text" />
 
     <EditText
-        android:id="@+id/etDescricaoServico"
+        android:id="@+id/etBairro"
         android:layout_width="290dp"
         android:layout_height="48dp"
-        android:layout_below="@+id/etNomeServico"
+        android:layout_below="@+id/etCidade"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_marginStart="59dp"
         android:layout_marginTop="42dp"
         android:layout_marginEnd="61dp"
         android:ems="10"
-        android:hint="Descrição"
+        android:hint="Bairro"
         android:inputType="text" />
 
     <EditText
-        android:id="@+id/etValorServico"
+        android:id="@+id/etRua"
         android:layout_width="290dp"
         android:layout_height="48dp"
-        android:layout_below="@+id/etDescricaoServico"
+        android:layout_below="@+id/etBairro"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_marginStart="59dp"
         android:layout_marginTop="42dp"
         android:layout_marginEnd="61dp"
         android:ems="10"
-        android:hint="Valor"
-        android:inputType="numberDecimal" />
+        android:hint="Rua"
+        android:inputType="text" />
+
+    <EditText
+        android:id="@+id/etNumero"
+        android:layout_width="290dp"
+        android:layout_height="48dp"
+        android:layout_below="@+id/etRua"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="59dp"
+        android:layout_marginTop="42dp"
+        android:layout_marginEnd="61dp"
+        android:ems="10"
+        android:hint="Número"
+        android:inputType="number" />
 
     <Button
-        android:id="@+id/btnCadastrar"
+        android:id="@+id/btnEditarEndereco"
         android:layout_width="wrap_content"
         android:layout_height="59dp"
-        android:layout_below="@+id/etValorServico"
+        android:layout_below="@+id/etNumero"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginStart="122dp"
-        android:layout_marginTop="72dp"
-        android:layout_marginEnd="121dp"
-        android:text="Cadastrar" />
+        android:layout_marginStart="125dp"
+        android:layout_marginTop="19dp"
+        android:layout_marginEnd="118dp"
+        android:text="Atualizar" />
 
 </RelativeLayout>
